feat: return to ui dynamic imports; preserve uiRegistry on hmr

--- a/packages/ui-registry/package.json
+++ b/packages/ui-registry/package.json
@@ -10,7 +10,6 @@
   },
   "scripts": {},
   "dependencies": {
-    "@npc-cli/ui-sdk": "workspace:^",
     "@npc-cli/ui__blog": "workspace:^",
     "@npc-cli/ui__global": "workspace:^",
     "@npc-cli/ui__jsh": "workspace:^",
@@ -21,5 +20,8 @@
     "react": "catalog:",
     "react-reverse-portal": "catalog:",
     "zustand": "catalog:"
+  },
+  "devDependencies": {
+    "@npc-cli/ui-sdk": "workspace:^"
   }
 }
