--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,6 +5,9 @@ packages:
 catalog:
   '@base-ui/react': 1.1.0
   '@biomejs/biome': ^2.3.11
+  '@gltf-transform/core': ^4.3.0
+  '@gltf-transform/extensions': ^4.3.0
+  '@gltf-transform/functions': ^4.3.0
   '@inquirer/prompts': ^8.1.0
   '@phosphor-icons/react': ^2.1.10
   '@react-three/drei': ^10.7.7
