--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -33,7 +33,7 @@ catalog:
   globals: ^16.5.0
   immer: 11.1.3
   javascript-stringify: 2.1.0
-  json-stringify-pretty-compact: ^4.0.0
+  json-stringify-pretty-compact: 4.0.0
   lodash.clonedeep: ^4.5.0
   maath: ^0.10.8
   react: 19.2.1
