--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+
+packages/media/src/starship-symbols/input/*
+!packages/media/src/starship-symbols/input/SymbolsHighRes.zip
