--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
+    "tsx": "catalog:",
     "typescript": "catalog:",
     "vite": "npm:rolldown-vite@^7.3.0"
   },
