--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -46,6 +46,7 @@ catalog:
   tailwind-merge: ^3.4.0
   tailwindcss: ^4.1.17
   three: ^0.182.0
+  tsx: ^4.21.0
   type-fest: ^5.3.1
   typescript: ~5.9.3
   uuid: ^13.0.0
