--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,11 +4,11 @@
     "noEmit": true,
     "esModuleInterop": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-    "target": "ES2022",
+    "target": "esnext",
     "useDefineForClassFields": true,
-    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "lib": ["ESNext", "WebWorker", "Webworker.Iterable", "WebWorker.AsyncIterable"],
     "module": "ESNext",
-    "types": ["node", "vite/client"],
+    "types": ["@types/node", "vite/client"],
     "skipLibCheck": true,
 
     "allowJs": true,
