--- a/packages/ui-sdk/package.json
+++ b/packages/ui-sdk/package.json
@@ -10,6 +10,7 @@
     "@npc-cli/theme": "workspace:^",
     "@npc-cli/ui-registry": "workspace:^",
     "@npc-cli/util": "workspace:^",
+    "@phosphor-icons/react": "catalog:",
     "immer": "catalog:",
     "react": "catalog:",
     "react-reverse-portal": "catalog:",
