feat: add item menu

--- a/packages/ui/map-edit/package.json
+++ b/packages/ui/map-edit/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {},
   "dependencies": {
+    "@base-ui/react": "catalog:",
     "@npc-cli/ui-sdk": "workspace:^",
     "@npc-cli/util": "workspace:^",
     "@phosphor-icons/react": "catalog:",
