--- a/packages/ui/map-edit/package.json
+++ b/packages/ui/map-edit/package.json
@@ -10,6 +10,7 @@
     "@atlaskit/pragmatic-drag-and-drop": "catalog:",
     "@atlaskit/pragmatic-drag-and-drop-hitbox": "catalog:",
     "@base-ui/react": "catalog:",
+    "@dragdroptouch/drag-drop-touch": "catalog:",
     "@npc-cli/ui-sdk": "workspace:^",
     "@npc-cli/util": "workspace:^",
     "@phosphor-icons/react": "catalog:",
