--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -26,6 +26,7 @@ catalog:
   '@types/react': ^19.2.7
   '@types/react-beforeunload': ^2.1.5
   '@types/react-dom': ^19.2.3
+  '@types/react-resizable': ^3.0.8
   '@types/three': ^0.182.0
   '@vitejs/plugin-basic-ssl': ^2.1.4
   '@vitejs/plugin-react-swc': ^4.2.2
@@ -43,6 +44,7 @@ catalog:
   react-beforeunload: ^2.7.0
   react-dom: ^19.2.0
   react-grid-layout: 2.2.2
+  react-resizable: ^3.1.3
   react-reverse-portal: 2.3.0
   rxjs: ^7.8.2
   short-uuid: ^6.0.3
