feat: MapEdit uses react-beforeunload

--- a/packages/ui/map-edit/package.json
+++ b/packages/ui/map-edit/package.json
@@ -15,7 +15,11 @@
     "@npc-cli/util": "workspace:^",
     "@phosphor-icons/react": "catalog:",
     "react": "catalog:",
+    "react-beforeunload": "catalog:",
     "react-dom": "catalog:",
     "zod": "catalog:"
+  },
+  "devDependencies": {
+    "@types/react-beforeunload": "catalog:"
   }
 }
