--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -33,7 +33,7 @@ catalog:
   braces: ^3.0.3
   cli-columns: ^4.0.0
   clsx: ^2.1.1
-  getopts: ^2.3.0
+  getopts: 2.3.0
   globals: ^16.5.0
   immer: 11.1.3
   javascript-stringify: 2.1.0
