--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ dist-ssr
 
 packages/media/src/starship-symbols/input/*
 !packages/media/src/starship-symbols/input/SymbolsHighRes.zip
+!packages/media/src/starship-symbols/input/Geomorphs.zip
