--- a/packages/media/package.json
+++ b/packages/media/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "type": "module",
   "exports": {
-    ".": "./src/index.ts"
+    ".": "./src/index.ts",
+    "./starship-symbols": "./src/starship-symbols/index.ts"
   },
   "scripts": {},
   "dependencies": {},
