--- a/scripts/package.json
+++ b/scripts/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "bin": {
     "get-symbol-pngs": "./src/bins/get-symbol-pngs.ts",
+    "ensure-asset-pngs": "./src/bins/ensure-asset-pngs.ts",
     "scaffold-ui": "./src/bins/scaffold-ui.ts",
     "test-gltf-transform": "./src/bins/test-gltf-transform.ts",
     "pngs-to-webp": "./src/bins/pngs-to-webp.ts"
@@ -14,6 +15,7 @@
     "@gltf-transform/functions": "catalog:",
     "@inquirer/prompts": "catalog:",
     "@npc-cli/cli": "workspace:^",
+    "@npc-cli/media": "workspace:^",
     "@npc-cli/util": "workspace:^",
     "getopts": "catalog:",
     "json-stringify-pretty-compact": "catalog:"
