feat: provide type ImageKey

--- a/packages/media/package.json
+++ b/packages/media/package.json
@@ -7,6 +7,8 @@
     "./starship-symbols": "./src/starship-symbols/index.ts"
   },
   "scripts": {},
-  "dependencies": {},
+  "dependencies": {
+    "@npc-cli/util": "workspace:^"
+  },
   "devDependencies": {}
 }
