feat: ensure-assets-pngs also computes starship-symbol/metadata.json with image dimensions

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -18,6 +18,7 @@
     "@npc-cli/media": "workspace:^",
     "@npc-cli/util": "workspace:^",
     "getopts": "catalog:",
+    "image-size": "catalog:",
     "json-stringify-pretty-compact": "catalog:"
   }
 }
