--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -35,6 +35,7 @@ catalog:
   clsx: ^2.1.1
   getopts: 2.3.0
   globals: ^16.5.0
+  image-size: ^2.0.2
   immer: 11.1.3
   javascript-stringify: 2.1.0
   json-stringify-pretty-compact: 4.0.0
