feat: can create node type "image"

--- a/packages/ui/map-edit/package.json
+++ b/packages/ui/map-edit/package.json
@@ -11,9 +11,11 @@
     "@atlaskit/pragmatic-drag-and-drop-hitbox": "catalog:",
     "@base-ui/react": "catalog:",
     "@dragdroptouch/drag-drop-touch": "catalog:",
+    "@npc-cli/media": "workspace:^",
     "@npc-cli/ui-sdk": "workspace:^",
     "@npc-cli/util": "workspace:^",
     "@phosphor-icons/react": "catalog:",
+    "@tanstack/react-query": "catalog:",
     "react": "catalog:",
     "react-beforeunload": "catalog:",
     "react-dom": "catalog:",
